# airbus-aircraft-customer-support-bot

./: .gitignore  README.md
backend/: data_insertion.py  langgraph.json  main.py  pyproject.toml  vectorstore.py
backend/src/: build_graph.py  database_conn.py  edges.py  questions.py  request_validate.py  utilities.py
backend/src/assistant/: car_rental_assistant.py  excursion_assistant.py  flight_assistant.py  hotel_assistant.py  primary_assistant.py
backend/src/database/faiss_db/: faiss_db_index.faiss  faiss_db_index.pkl
backend/src/tools/: car_rental.py  excursions.py  flights.py  hotels.py  lookup_policies_retriever_tool.py
frontend/: package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatBotBody.jsx  ChatBotBody.module.scss  Header.jsx  request.js
